...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg_gradient"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/login_screen_content_offset_center_top"
        android:gravity="center"
        android:orientation="vertical">
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_screen_title_margin"
            android:text="@string/app_name"
            style="@style/TextAppearance.MainTitle" />

        <RelativeLayout
            android:id="@+id/facebookSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/facebook_button_bg"
            android:elevation="4dp">
...
