...
    <string name="app_name">COPS SOCIALISING</string>
    <string name="label_create_post_activity">Create post</string>
    <string name="label_post_detail_activity">Post detail</string>
    <string name="label_image_detail_activity">Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_profile">Create profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_edit_post">Edit post</string>
    <string name="fb_login_protocol_scheme">fb246271022786680</string>
    <string name="text_take_photo">Take photo</string>
    <string name="text_pick_photo">Pick from Gallery</string>
    <string name="button_title_cancel">Cancel</string>
...
